show days and time

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -1,6 +1,7 @@
 /*
  *= require jquery.ui.all
  *= require jquery-minicolors
+ *= require jquery.timepicker
  *= require bootstrap_and_overrides
  *= require fullcalendar
  *= require fullcalendar.print
