--- a/app/views/calendars/index.html.haml
+++ b/app/views/calendars/index.html.haml
@@ -28,11 +28,15 @@
       - if e.schedule.occurring_at? Time.now
         %li
           = link_to e.name, event_path(e)
-          %i
-            = e.from_time.strftime('%I:%M %p')
-            = '-'
-            = e.to_time.strftime('%I:%M %p')
-          %br
+          - if e.is_all_day
+            %i
+              All Day Event
+          - else
+            %i
+              = e.from_time.strftime('%I:%M %p')
+              = '-'
+              = e.to_time.strftime('%I:%M %p')
+            %br
   %h2 Happening Now
   - now = Time.now.strftime('%H%M').to_i
   %ul
@@ -43,9 +47,7 @@
           %li
             = link_to e.name, event_path(e) 
             %i
-              = e.from_time.strftime('%I:%M %p')
-              = '-'
-              = e.to_time.strftime('%I:%M %p')
+              All Day Event
             %br
         -else
           - if e.from_time.strftime('%H%M').to_i <= now && e.to_time.strftime('%H%M').to_i >= now
@@ -63,6 +65,9 @@
         
 - content_for :footer do
   :javascript
+    function new_event(){
+      alert('moo');
+    }
       $('#calendar').fullCalendar({
           header: {
               left: 'prev,next today',
@@ -71,7 +76,7 @@
           },
           selectable: true,
           selectHelper: true,
-          editable: true,
+          editable: false,
           ignoreTimezone: false,
           select: this.select,
           eventClick: this.eventClick,
