Show Agenda views

--- a/app/views/calendars/index.html.haml
+++ b/app/views/calendars/index.html.haml
@@ -70,9 +70,9 @@
     }
       $('#calendar').fullCalendar({
           header: {
-              left: 'prev,next today',
+              left: 'prev,today,next',
               center: 'title',
-              right: 'month,basicWeek,basicDay'
+              right: 'month,agendaWeek,agendaDay'
           },
           selectable: true,
           selectHelper: true,
