--- a/app/views/calendars/index.html.haml
+++ b/app/views/calendars/index.html.haml
@@ -31,6 +31,7 @@
     -events.map do |e| 
       - if (e.schedule.occurs_on? Date.today ) || (e.schedule.occurring_at? Time.now)
         %li
+          = link_to 'x', event_path(e), :confirm => 'Are you sure you want to remove the event?', :method => :delete
           = link_to e.name, event_path(e)
           - if e.is_all_day
             %i
@@ -49,6 +50,7 @@
       - if e.schedule.occurring_at? Time.now
         -if e.is_all_day
           %li
+            = link_to 'x', event_path(e), :confirm => 'Are you sure you want to remove the event?', :method => :delete
             = link_to e.name, event_path(e) 
             %i
               All Day Event
@@ -56,16 +58,12 @@
         -else
           - if e.from_time.strftime('%H%M').to_i <= now && e.to_time.strftime('%H%M').to_i >= now
             %li
+              = link_to 'x', event_path(e), :confirm => 'Are you sure you want to remove the event?', :method => :delete
               = link_to e.name, event_path(e) 
               %i
                 = e.from_time.strftime('%I:%M %p')
                 = '-'
                 = e.to_time.strftime('%I:%M %p')
-          -#%li
-            = e.name 
-            = e.from_time.strftime('%I:%M %p')
-            = '-'
-            = e.to_time.strftime('%I:%M %p')
 - content_for :footer do
   :javascript
       var new_event_link = "#{new_event_path}"
