Show end times on calendar

--- a/app/views/calendars/index.html.haml
+++ b/app/views/calendars/index.html.haml
@@ -95,6 +95,7 @@
                 }
             }
           ],
-          eventResize: this.eventDropOrResize
+          eventResize: this.eventDropOrResize,
+          timeFormat: 'h:mmtt{ - h:mmtt} '
       });
 
