--- a/app/views/events/_form.html.haml
+++ b/app/views/events/_form.html.haml
@@ -30,7 +30,7 @@
         - else
           = f.text_field :to_time, {style: 'width:auto;', :class => 'timepicker'}
       .event_time
-        = f.time_zone_select :time_zone, ActiveSupport::TimeZone.us_zones, :default => "Central Time (US & Canada)"
+        = f.time_zone_select :time_zone, ActiveSupport::TimeZone.us_zones, :default => "Eastern Time (US & Canada)"
       = f.select :repeats, Event::RepeatsOptions
       = render partial: 'repeats_daily_options', locals: {f: f}
       = render partial: 'repeats_weekly_options', locals: {f: f}
